projet.output
Terminals unused in grammar

   err


Grammar

    0 $accept: S $end

    1 S: idf acco mc_var acco DEC accf mc_code acco list_inst accf accf

    2 DEC: simpleDEC DEC
    3    | TabDEC DEC
    4    | ConstDEC DEC
    5    | STRUCTURE DEC
    6    | StructDEC DEC
    7    | /* empty */

    8 simpleDEC: mc_integer LISTVARINT pvg
    9          | mc_float LISTVARFLOAT pvg

   10 TabDEC: mc_integer idf crochero entier crocherf pvg
   11       | mc_float idf crochero entier crocherf pvg

   12 ConstDEC: mc_const idf pvg
   13         | mc_const idf aff entier pvg
   14         | mc_const idf aff reel pvg

   15 STRUCTURE: mc_struct acco DEC accf idf pvg

   16 StructDEC: mc_struct idf LISTSTRUCT pvg

   17 LISTVARINT: idf
   18           | idf vig LISTVARINT

   19 LISTVARFLOAT: idf
   20             | idf vig LISTVARFLOAT

   21 LISTSTRUCT: idf
   22           | idf vig LISTSTRUCT
   23           | idf crochero entier crocherf

   24 list_inst: INST list_inst
   25          | /* empty */

   26 INST: affectation
   27     | CONDITION
   28     | BOUCLEFOR
   29     | BOUCLEWHILE

   30 affectation: idf aff expressionAr pvg
   31            | idf pts idf aff expressionAr pvg
   32            | idf crochero idf crocherf aff expressionAr pvg
   33            | idf crochero entier crocherf aff expressionAr pvg

   34 expressionAr: expressionAr add expressionAr
   35             | expressionAr sub expressionAr
   36             | expressionAr division expressionAr
   37             | expressionAr mul expressionAr
   38             | idf
   39             | entier
   40             | reel
   41             | idf crochero entier crocherf
   42             | idf crochero idf crocherf
   43             | idf pts idf
   44             | pro expressionAr prf

   45 CONDITION: IF list_inst ACCF_SIMPLE
   46          | IF list_inst ACCF_IF ELSE list_inst ACCF_ELSE

   47 IF: mc_if pro cond prf acco

   48 ACCF_SIMPLE: accf

   49 ELSE: mc_else acco

   50 ACCF_IF: accf

   51 ACCF_ELSE: accf

   52 cond: comparaison
   53     | expressionLog

   54 comparaison: expressionAr sup expressionAr
   55            | expressionAr inf expressionAr
   56            | expressionAr egal expressionAr
   57            | expressionAr diff expressionAr
   58            | expressionAr supegl expressionAr
   59            | expressionAr infegl expressionAr

   60 expressionLog: pro comparaison prf operateurLog pro comparaison prf
   61              | expressionAr operateurLog expressionAr
   62              | NOT expressionAr

   63 operateurLog: ET
   64             | OU

   65 BOUCLEFOR: FOR list_inst ACCF1

   66 FOR: mc_for pro idf dpts entier dpts entier dpts idf prf acco

   67 ACCF1: accf

   68 BOUCLEWHILE: WHILE WLS list_inst ACCF

   69 WHILE: mc_while pro

   70 WLS: cond prf acco

   71 ACCF: accf


Terminals, with rules where they appear

$end (0) 0
error (256)
mc_integer (258) 8 10
mc_float (259) 9 11
mc_const (260) 12 13 14
mc_if (261) 47
mc_else (262) 49
mc_for (263) 66
mc_while (264) 69
mc_struct (265) 15 16
idf (266) 1 10 11 12 13 14 15 16 17 18 19 20 21 22 23 30 31 32 33 38
    41 42 43 66
entier (267) 10 11 13 23 33 39 41 66
reel (268) 14 40
aff (269) 13 14 30 31 32 33
pro (270) 44 47 60 66 69
prf (271) 44 47 60 66 70
add (272) 34
sub (273) 35
division (274) 36
mul (275) 37
pvg (276) 8 9 10 11 12 13 14 15 16 30 31 32 33
vig (277) 18 20 22
pts (278) 31 43
dpts (279) 66
acco (280) 1 15 47 49 66 70
accf (281) 1 15 48 50 51 67 71
ET (282) 63
OU (283) 64
NOT (284) 62
inf (285) 55
sup (286) 54
infegl (287) 59
supegl (288) 58
egal (289) 56
diff (290) 57
err (291)
mc_var (292) 1
mc_code (293) 1
crochero (294) 10 11 23 32 33 41 42
crocherf (295) 10 11 23 32 33 41 42


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
S (42)
    on left: 1, on right: 0
DEC (43)
    on left: 2 3 4 5 6 7, on right: 1 2 3 4 5 6 15
simpleDEC (44)
    on left: 8 9, on right: 2
TabDEC (45)
    on left: 10 11, on right: 3
ConstDEC (46)
    on left: 12 13 14, on right: 4
STRUCTURE (47)
    on left: 15, on right: 5
StructDEC (48)
    on left: 16, on right: 6
LISTVARINT (49)
    on left: 17 18, on right: 8 18
LISTVARFLOAT (50)
    on left: 19 20, on right: 9 20
LISTSTRUCT (51)
    on left: 21 22 23, on right: 16 22
list_inst (52)
    on left: 24 25, on right: 1 24 45 46 65 68
INST (53)
    on left: 26 27 28 29, on right: 24
affectation (54)
    on left: 30 31 32 33, on right: 26
expressionAr (55)
    on left: 34 35 36 37 38 39 40 41 42 43 44, on right: 30 31 32 33
    34 35 36 37 44 54 55 56 57 58 59 61 62
CONDITION (56)
    on left: 45 46, on right: 27
IF (57)
    on left: 47, on right: 45 46
ACCF_SIMPLE (58)
    on left: 48, on right: 45
ELSE (59)
    on left: 49, on right: 46
ACCF_IF (60)
    on left: 50, on right: 46
ACCF_ELSE (61)
    on left: 51, on right: 46
cond (62)
    on left: 52 53, on right: 47 70
comparaison (63)
    on left: 54 55 56 57 58 59, on right: 52 60
expressionLog (64)
    on left: 60 61 62, on right: 53
operateurLog (65)
    on left: 63 64, on right: 60 61
BOUCLEFOR (66)
    on left: 65, on right: 28
FOR (67)
    on left: 66, on right: 65
ACCF1 (68)
    on left: 67, on right: 65
BOUCLEWHILE (69)
    on left: 68, on right: 29
WHILE (70)
    on left: 69, on right: 68
WLS (71)
    on left: 70, on right: 68
ACCF (72)
    on left: 71, on right: 68


State 0

    0 $accept: . S $end
    1 S: . idf acco mc_var acco DEC accf mc_code acco list_inst accf accf

    idf  shift, and go to state 1

    S  go to state 2


State 1

    1 S: idf . acco mc_var acco DEC accf mc_code acco list_inst accf accf

    acco  shift, and go to state 3


State 2

    0 $accept: S . $end

    $end  shift, and go to state 4


State 3

    1 S: idf acco . mc_var acco DEC accf mc_code acco list_inst accf accf

    mc_var  shift, and go to state 5


State 4

    0 $accept: S $end .

    $default  accept


State 5

    1 S: idf acco mc_var . acco DEC accf mc_code acco list_inst accf accf

    acco  shift, and go to state 6


State 6

    1 S: idf acco mc_var acco . DEC accf mc_code acco list_inst accf accf
    2 DEC: . simpleDEC DEC
    3    | . TabDEC DEC
    4    | . ConstDEC DEC
    5    | . STRUCTURE DEC
    6    | . StructDEC DEC
    7    | .
    8 simpleDEC: . mc_integer LISTVARINT pvg
    9          | . mc_float LISTVARFLOAT pvg
   10 TabDEC: . mc_integer idf crochero entier crocherf pvg
   11       | . mc_float idf crochero entier crocherf pvg
   12 ConstDEC: . mc_const idf pvg
   13         | . mc_const idf aff entier pvg
   14         | . mc_const idf aff reel pvg
   15 STRUCTURE: . mc_struct acco DEC accf idf pvg
   16 StructDEC: . mc_struct idf LISTSTRUCT pvg

    mc_integer  shift, and go to state 7
    mc_float    shift, and go to state 8
    mc_const    shift, and go to state 9
    mc_struct   shift, and go to state 10

    $default  reduce using rule 7 (DEC)

    DEC        go to state 11
    simpleDEC  go to state 12
    TabDEC     go to state 13
    ConstDEC   go to state 14
    STRUCTURE  go to state 15
    StructDEC  go to state 16


State 7

    8 simpleDEC: mc_integer . LISTVARINT pvg
   10 TabDEC: mc_integer . idf crochero entier crocherf pvg
   17 LISTVARINT: . idf
   18           | . idf vig LISTVARINT

    idf  shift, and go to state 17

    LISTVARINT  go to state 18


State 8

    9 simpleDEC: mc_float . LISTVARFLOAT pvg
   11 TabDEC: mc_float . idf crochero entier crocherf pvg
   19 LISTVARFLOAT: . idf
   20             | . idf vig LISTVARFLOAT

    idf  shift, and go to state 19

    LISTVARFLOAT  go to state 20


State 9

   12 ConstDEC: mc_const . idf pvg
   13         | mc_const . idf aff entier pvg
   14         | mc_const . idf aff reel pvg

    idf  shift, and go to state 21


State 10

   15 STRUCTURE: mc_struct . acco DEC accf idf pvg
   16 StructDEC: mc_struct . idf LISTSTRUCT pvg

    idf   shift, and go to state 22
    acco  shift, and go to state 23


State 11

    1 S: idf acco mc_var acco DEC . accf mc_code acco list_inst accf accf

    accf  shift, and go to state 24


State 12

    2 DEC: . simpleDEC DEC
    2    | simpleDEC . DEC
    3    | . TabDEC DEC
    4    | . ConstDEC DEC
    5    | . STRUCTURE DEC
    6    | . StructDEC DEC
    7    | .
    8 simpleDEC: . mc_integer LISTVARINT pvg
    9          | . mc_float LISTVARFLOAT pvg
   10 TabDEC: . mc_integer idf crochero entier crocherf pvg
   11       | . mc_float idf crochero entier crocherf pvg
   12 ConstDEC: . mc_const idf pvg
   13         | . mc_const idf aff entier pvg
   14         | . mc_const idf aff reel pvg
   15 STRUCTURE: . mc_struct acco DEC accf idf pvg
   16 StructDEC: . mc_struct idf LISTSTRUCT pvg

    mc_integer  shift, and go to state 7
    mc_float    shift, and go to state 8
    mc_const    shift, and go to state 9
    mc_struct   shift, and go to state 10

    $default  reduce using rule 7 (DEC)

    DEC        go to state 25
    simpleDEC  go to state 12
    TabDEC     go to state 13
    ConstDEC   go to state 14
    STRUCTURE  go to state 15
    StructDEC  go to state 16


State 13

    2 DEC: . simpleDEC DEC
    3    | . TabDEC DEC
    3    | TabDEC . DEC
    4    | . ConstDEC DEC
    5    | . STRUCTURE DEC
    6    | . StructDEC DEC
    7    | .
    8 simpleDEC: . mc_integer LISTVARINT pvg
    9          | . mc_float LISTVARFLOAT pvg
   10 TabDEC: . mc_integer idf crochero entier crocherf pvg
   11       | . mc_float idf crochero entier crocherf pvg
   12 ConstDEC: . mc_const idf pvg
   13         | . mc_const idf aff entier pvg
   14         | . mc_const idf aff reel pvg
   15 STRUCTURE: . mc_struct acco DEC accf idf pvg
   16 StructDEC: . mc_struct idf LISTSTRUCT pvg

    mc_integer  shift, and go to state 7
    mc_float    shift, and go to state 8
    mc_const    shift, and go to state 9
    mc_struct   shift, and go to state 10

    $default  reduce using rule 7 (DEC)

    DEC        go to state 26
    simpleDEC  go to state 12
    TabDEC     go to state 13
    ConstDEC   go to state 14
    STRUCTURE  go to state 15
    StructDEC  go to state 16


State 14

    2 DEC: . simpleDEC DEC
    3    | . TabDEC DEC
    4    | . ConstDEC DEC
    4    | ConstDEC . DEC
    5    | . STRUCTURE DEC
    6    | . StructDEC DEC
    7    | .
    8 simpleDEC: . mc_integer LISTVARINT pvg
    9          | . mc_float LISTVARFLOAT pvg
   10 TabDEC: . mc_integer idf crochero entier crocherf pvg
   11       | . mc_float idf crochero entier crocherf pvg
   12 ConstDEC: . mc_const idf pvg
   13         | . mc_const idf aff entier pvg
   14         | . mc_const idf aff reel pvg
   15 STRUCTURE: . mc_struct acco DEC accf idf pvg
   16 StructDEC: . mc_struct idf LISTSTRUCT pvg

    mc_integer  shift, and go to state 7
    mc_float    shift, and go to state 8
    mc_const    shift, and go to state 9
    mc_struct   shift, and go to state 10

    $default  reduce using rule 7 (DEC)

    DEC        go to state 27
    simpleDEC  go to state 12
    TabDEC     go to state 13
    ConstDEC   go to state 14
    STRUCTURE  go to state 15
    StructDEC  go to state 16


State 15

    2 DEC: . simpleDEC DEC
    3    | . TabDEC DEC
    4    | . ConstDEC DEC
    5    | . STRUCTURE DEC
    5    | STRUCTURE . DEC
    6    | . StructDEC DEC
    7    | .
    8 simpleDEC: . mc_integer LISTVARINT pvg
    9          | . mc_float LISTVARFLOAT pvg
   10 TabDEC: . mc_integer idf crochero entier crocherf pvg
   11       | . mc_float idf crochero entier crocherf pvg
   12 ConstDEC: . mc_const idf pvg
   13         | . mc_const idf aff entier pvg
   14         | . mc_const idf aff reel pvg
   15 STRUCTURE: . mc_struct acco DEC accf idf pvg
   16 StructDEC: . mc_struct idf LISTSTRUCT pvg

    mc_integer  shift, and go to state 7
    mc_float    shift, and go to state 8
    mc_const    shift, and go to state 9
    mc_struct   shift, and go to state 10

    $default  reduce using rule 7 (DEC)

    DEC        go to state 28
    simpleDEC  go to state 12
    TabDEC     go to state 13
    ConstDEC   go to state 14
    STRUCTURE  go to state 15
    StructDEC  go to state 16


State 16

    2 DEC: . simpleDEC DEC
    3    | . TabDEC DEC
    4    | . ConstDEC DEC
    5    | . STRUCTURE DEC
    6    | . StructDEC DEC
    6    | StructDEC . DEC
    7    | .
    8 simpleDEC: . mc_integer LISTVARINT pvg
    9          | . mc_float LISTVARFLOAT pvg
   10 TabDEC: . mc_integer idf crochero entier crocherf pvg
   11       | . mc_float idf crochero entier crocherf pvg
   12 ConstDEC: . mc_const idf pvg
   13         | . mc_const idf aff entier pvg
   14         | . mc_const idf aff reel pvg
   15 STRUCTURE: . mc_struct acco DEC accf idf pvg
   16 StructDEC: . mc_struct idf LISTSTRUCT pvg

    mc_integer  shift, and go to state 7
    mc_float    shift, and go to state 8
    mc_const    shift, and go to state 9
    mc_struct   shift, and go to state 10

    $default  reduce using rule 7 (DEC)

    DEC        go to state 29
    simpleDEC  go to state 12
    TabDEC     go to state 13
    ConstDEC   go to state 14
    STRUCTURE  go to state 15
    StructDEC  go to state 16


State 17

   10 TabDEC: mc_integer idf . crochero entier crocherf pvg
   17 LISTVARINT: idf .
   18           | idf . vig LISTVARINT

    vig       shift, and go to state 30
    crochero  shift, and go to state 31

    $default  reduce using rule 17 (LISTVARINT)


State 18

    8 simpleDEC: mc_integer LISTVARINT . pvg

    pvg  shift, and go to state 32


State 19

   11 TabDEC: mc_float idf . crochero entier crocherf pvg
   19 LISTVARFLOAT: idf .
   20             | idf . vig LISTVARFLOAT

    vig       shift, and go to state 33
    crochero  shift, and go to state 34

    $default  reduce using rule 19 (LISTVARFLOAT)


State 20

    9 simpleDEC: mc_float LISTVARFLOAT . pvg

    pvg  shift, and go to state 35


State 21

   12 ConstDEC: mc_const idf . pvg
   13         | mc_const idf . aff entier pvg
   14         | mc_const idf . aff reel pvg

    aff  shift, and go to state 36
    pvg  shift, and go to state 37


State 22

   16 StructDEC: mc_struct idf . LISTSTRUCT pvg
   21 LISTSTRUCT: . idf
   22           | . idf vig LISTSTRUCT
   23           | . idf crochero entier crocherf

    idf  shift, and go to state 38

    LISTSTRUCT  go to state 39


State 23

    2 DEC: . simpleDEC DEC
    3    | . TabDEC DEC
    4    | . ConstDEC DEC
    5    | . STRUCTURE DEC
    6    | . StructDEC DEC
    7    | .
    8 simpleDEC: . mc_integer LISTVARINT pvg
    9          | . mc_float LISTVARFLOAT pvg
   10 TabDEC: . mc_integer idf crochero entier crocherf pvg
   11       | . mc_float idf crochero entier crocherf pvg
   12 ConstDEC: . mc_const idf pvg
   13         | . mc_const idf aff entier pvg
   14         | . mc_const idf aff reel pvg
   15 STRUCTURE: . mc_struct acco DEC accf idf pvg
   15          | mc_struct acco . DEC accf idf pvg
   16 StructDEC: . mc_struct idf LISTSTRUCT pvg

    mc_integer  shift, and go to state 7
    mc_float    shift, and go to state 8
    mc_const    shift, and go to state 9
    mc_struct   shift, and go to state 10

    $default  reduce using rule 7 (DEC)

    DEC        go to state 40
    simpleDEC  go to state 12
    TabDEC     go to state 13
    ConstDEC   go to state 14
    STRUCTURE  go to state 15
    StructDEC  go to state 16


State 24

    1 S: idf acco mc_var acco DEC accf . mc_code acco list_inst accf accf

    mc_code  shift, and go to state 41


State 25

    2 DEC: simpleDEC DEC .

    $default  reduce using rule 2 (DEC)


State 26

    3 DEC: TabDEC DEC .

    $default  reduce using rule 3 (DEC)


State 27

    4 DEC: ConstDEC DEC .

    $default  reduce using rule 4 (DEC)


State 28

    5 DEC: STRUCTURE DEC .

    $default  reduce using rule 5 (DEC)


State 29

    6 DEC: StructDEC DEC .

    $default  reduce using rule 6 (DEC)


State 30

   17 LISTVARINT: . idf
   18           | . idf vig LISTVARINT
   18           | idf vig . LISTVARINT

    idf  shift, and go to state 42

    LISTVARINT  go to state 43


State 31

   10 TabDEC: mc_integer idf crochero . entier crocherf pvg

    entier  shift, and go to state 44


State 32

    8 simpleDEC: mc_integer LISTVARINT pvg .

    $default  reduce using rule 8 (simpleDEC)


State 33

   19 LISTVARFLOAT: . idf
   20             | . idf vig LISTVARFLOAT
   20             | idf vig . LISTVARFLOAT

    idf  shift, and go to state 45

    LISTVARFLOAT  go to state 46


State 34

   11 TabDEC: mc_float idf crochero . entier crocherf pvg

    entier  shift, and go to state 47


State 35

    9 simpleDEC: mc_float LISTVARFLOAT pvg .

    $default  reduce using rule 9 (simpleDEC)


State 36

   13 ConstDEC: mc_const idf aff . entier pvg
   14         | mc_const idf aff . reel pvg

    entier  shift, and go to state 48
    reel    shift, and go to state 49


State 37

   12 ConstDEC: mc_const idf pvg .

    $default  reduce using rule 12 (ConstDEC)


State 38

   21 LISTSTRUCT: idf .
   22           | idf . vig LISTSTRUCT
   23           | idf . crochero entier crocherf

    vig       shift, and go to state 50
    crochero  shift, and go to state 51

    $default  reduce using rule 21 (LISTSTRUCT)


State 39

   16 StructDEC: mc_struct idf LISTSTRUCT . pvg

    pvg  shift, and go to state 52


State 40

   15 STRUCTURE: mc_struct acco DEC . accf idf pvg

    accf  shift, and go to state 53


State 41

    1 S: idf acco mc_var acco DEC accf mc_code . acco list_inst accf accf

    acco  shift, and go to state 54


State 42

   17 LISTVARINT: idf .
   18           | idf . vig LISTVARINT

    vig  shift, and go to state 30

    $default  reduce using rule 17 (LISTVARINT)


State 43

   18 LISTVARINT: idf vig LISTVARINT .

    $default  reduce using rule 18 (LISTVARINT)


State 44

   10 TabDEC: mc_integer idf crochero entier . crocherf pvg

    crocherf  shift, and go to state 55


State 45

   19 LISTVARFLOAT: idf .
   20             | idf . vig LISTVARFLOAT

    vig  shift, and go to state 33

    $default  reduce using rule 19 (LISTVARFLOAT)


State 46

   20 LISTVARFLOAT: idf vig LISTVARFLOAT .

    $default  reduce using rule 20 (LISTVARFLOAT)


State 47

   11 TabDEC: mc_float idf crochero entier . crocherf pvg

    crocherf  shift, and go to state 56


State 48

   13 ConstDEC: mc_const idf aff entier . pvg

    pvg  shift, and go to state 57


State 49

   14 ConstDEC: mc_const idf aff reel . pvg

    pvg  shift, and go to state 58


State 50

   21 LISTSTRUCT: . idf
   22           | . idf vig LISTSTRUCT
   22           | idf vig . LISTSTRUCT
   23           | . idf crochero entier crocherf

    idf  shift, and go to state 38

    LISTSTRUCT  go to state 59


State 51

   23 LISTSTRUCT: idf crochero . entier crocherf

    entier  shift, and go to state 60


State 52

   16 StructDEC: mc_struct idf LISTSTRUCT pvg .

    $default  reduce using rule 16 (StructDEC)


State 53

   15 STRUCTURE: mc_struct acco DEC accf . idf pvg

    idf  shift, and go to state 61


State 54

    1 S: idf acco mc_var acco DEC accf mc_code acco . list_inst accf accf
   24 list_inst: . INST list_inst
   25          | .
   26 INST: . affectation
   27     | . CONDITION
   28     | . BOUCLEFOR
   29     | . BOUCLEWHILE
   30 affectation: . idf aff expressionAr pvg
   31            | . idf pts idf aff expressionAr pvg
   32            | . idf crochero idf crocherf aff expressionAr pvg
   33            | . idf crochero entier crocherf aff expressionAr pvg
   45 CONDITION: . IF list_inst ACCF_SIMPLE
   46          | . IF list_inst ACCF_IF ELSE list_inst ACCF_ELSE
   47 IF: . mc_if pro cond prf acco
   65 BOUCLEFOR: . FOR list_inst ACCF1
   66 FOR: . mc_for pro idf dpts entier dpts entier dpts idf prf acco
   68 BOUCLEWHILE: . WHILE WLS list_inst ACCF
   69 WHILE: . mc_while pro

    mc_if     shift, and go to state 62
    mc_for    shift, and go to state 63
    mc_while  shift, and go to state 64
    idf       shift, and go to state 65

    $default  reduce using rule 25 (list_inst)

    list_inst    go to state 66
    INST         go to state 67
    affectation  go to state 68
    CONDITION    go to state 69
    IF           go to state 70
    BOUCLEFOR    go to state 71
    FOR          go to state 72
    BOUCLEWHILE  go to state 73
    WHILE        go to state 74


State 55

   10 TabDEC: mc_integer idf crochero entier crocherf . pvg

    pvg  shift, and go to state 75


State 56

   11 TabDEC: mc_float idf crochero entier crocherf . pvg

    pvg  shift, and go to state 76


State 57

   13 ConstDEC: mc_const idf aff entier pvg .

    $default  reduce using rule 13 (ConstDEC)


State 58

   14 ConstDEC: mc_const idf aff reel pvg .

    $default  reduce using rule 14 (ConstDEC)

